--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -110,9 +110,11 @@
                     <form action="">
                         <div class="input-group">
                             <input type="email" name="email" id="email" placeholder="Email" required>
-                            <input type="password" name="pswd" id="pswd" placeholder="Password" required>
-                            <i class="fas fa-eye text-gray"></i>
-                            <i class="fas fa-eye-slash text-gray"></i>
+                            <div class="pass-eyes">
+                                <input type="password" name="pswd" id="pswd" placeholder="Password" required>
+                                <i class="eye fas fa-eye text-gray"></i>
+                                <i class="eye fas fa-eye-slash text-gray"></i>
+                            </div>
                         </div>
                         <div class="sign-in-up">
                             <input type="submit" name="signin" value="Sign In" class="btn btn-primary" id="sign_in">
