--- a/celebrate/pages/checkout.html
+++ b/celebrate/pages/checkout.html
@@ -107,9 +107,11 @@
                     <form action="">
                         <div class="input-group">
                             <input type="email" name="email" id="email" placeholder="Email" required>
-                            <input type="password" name="pswd" id="pswd" placeholder="Password" required>
-                            <i class="fas fa-eye text-gray"></i>
-                            <i class="fas fa-eye-slash text-gray"></i>
+                            <div class="pass-eyes">
+                                <input type="password" name="pswd" id="pswd" placeholder="Password" required>
+                                <i class="eye fas fa-eye text-gray"></i>
+                                <i class="eye fas fa-eye-slash text-gray"></i>
+                            </div>
                         </div>
                         <div class="sign-in-up">
                             <input type="submit" name="signin" value="Sign In" class="btn btn-primary" id="sign_in">
@@ -151,13 +153,15 @@
                         <h2 class="pb-1">Returning Customer</h2>
                         <form action="">
                             <div class="input-group">
-                                <input type="email" name="email" id="email" placeholder="Email" required>
+                                <div class="email-group">
+                                    <input type="email" name="email" id="email" placeholder="Email" required>
+                                    <i class="icon fas fa-envelope"></i>
+                                </div>
                                 <div class="pswd-0">
                                     <input type="password" name="pswd" id="pswd_0" placeholder="Password" required>
-                                    <div class="eye">
-                                        <i class="fas fa-eye text-gray"></i>
-                                        <i class="fas fa-eye-slash text-gray"></i>
-                                    </div>
+                                    <i class="icon fas fa-lock"></i>
+                                    <i class=" eye fas fa-eye text-gray"></i>
+                                    <i class="eye fas fa-eye-slash text-gray"></i>
                                 </div>
                             </div>
                             <div class="sign-in-up">
@@ -182,31 +186,48 @@
                             </div>
                         </form>
                     </div>
-                    <div class="user-account">
+                    <div class="user-account-2">
                         <h2 class="pb-1">New Customer</h2>
                         <form action="">
                             <div class="input-group">
-                                <input type="text" name="fname" id="fname" placeholder="First Name" required>
-                                <input type="text" name="lname" id="lname" placeholder="Last Name" required>
-                                <input type="email" name="email" id="email" placeholder="Email" required>
+                                <div class="name">
+                                    <input type="text" name="fname" id="fname" placeholder="First Name" required>
+                                    <i class="icon fas fa-user-alt"></i>
+                                </div>
+                            </div>
+                            <div class="input-group">
+                                <div class="name">
+                                    <input type="text" name="lname" id="lname" placeholder="Last Name" required>
+                                    <i class="icon fas fa-user-alt"></i>
+                                </div>
+                            </div>
+                            <div class="input-group">
+                                <div class="email-group">
+                                    <input type="email" name="email" id="email" placeholder="Email" required>
+                                    <i class="icon fas fa-envelope"></i>
+                                </div>
+                            </div>
+                            <div class="input-group">
                                 <div class="pswd-1">
                                     <input type="password" name="pswd" id="pswd_1" placeholder="Password" required>
-                                    <div class="eyes">
-                                        <i class="fas fa-eye text-gray"></i>
-                                        <i class="fas fa-eye-slash text-gray"></i>
-                                    </div>
+                                    <i class="icon fas fa-lock"></i>
+                                    <i class="eye fas fa-eye text-gray"></i>
+                                    <i class="eye fas fa-eye-slash text-gray"></i>
                                 </div>
+                            </div>
+                            <div class="input-group">
                                 <div class="pswd-2">
                                     <input type="password" name="pswd" id="pswd_2" placeholder="Confirm Password"
                                         required>
-                                    <div class="eyes">
-                                        <i class="fas fa-eye text-gray"></i>
-                                        <i class="fas fa-eye-slash text-gray"></i>
-                                    </div>
+                                    <i class="icon fas fa-lock"></i>
+                                    <i class="eye fas fa-eye text-gray"></i>
+                                    <i class="eye fas fa-eye-slash text-gray"></i>
                                 </div>
                             </div>
-                            <div class="sign-in-up">
-                                <a href="#" class="btn btn-primary" id="sign_up">Sign Up</a>
+                            <div class="input-group">
+                                <div class="sign-in-up">
+                                    <a href="#" class="btn btn-primary" id="sign_up">Sign Up</a>
+                                </div>
                             </div>
                         </form>
                     </div>
