--- a/celebrate/pages/checkout.html
+++ b/celebrate/pages/checkout.html
@@ -54,7 +54,7 @@
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="#home" class="nav-link">My Bookings</a>
+                <a href="mybookings.html" class="nav-link">My Bookings</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -254,7 +254,7 @@
                     <nav class="footer-nav">
                         <a href="../index.html">Home</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="#home">My Bookings</a>
+                        <a href="mybookings.html">My Bookings</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
