--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -123,7 +123,7 @@
                             </p>
                             <a href="pages/signup.html" class="btn btn-danger" id="sign_up">Sign Up</a>
                         </div>
-                        <p>Or, Sign In With:</p>
+                        <p>Or, Sign Up With:</p>
                         <div class="user-social">
                             <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-facebook"></i>
