--- a/celebrate/pages/checkout.html
+++ b/celebrate/pages/checkout.html
@@ -120,7 +120,7 @@
                             </p>
                             <a href="signup.html" class="btn btn-danger" id="sign_up">Sign Up</a>
                         </div>
-                        <p>Or, Sign In With:</p>
+                        <p>Or, Sign Up With:</p>
                         <div class="user-social">
                             <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-facebook"></i>
@@ -171,7 +171,7 @@
                                 <p class="forgot order-1">
                                     <a href="#">Forgot password?</a>
                                 </p>
-                                <p>Or, Sign In With:</p>
+                                <p>Or, Sign Up With:</p>
                             </div>
                             <div class="user-social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
