--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -120,7 +120,7 @@
                             </p>
                             <a href="signup.html" class="btn btn-danger" id="sign_up">Sign Up</a>
                         </div>
-                        <p>Or, Sign In With:</p>
+                        <p>Or, Sign Up With:</p>
                         <div class="user-social">
                             <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-facebook"></i>
