--- a/celebrate/pages/checkout.html
+++ b/celebrate/pages/checkout.html
@@ -96,7 +96,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-checkout-btns">
-                        <button class="btn btn-gray">View Carts</button>
+                        <a href="mybookings.html" class="btn btn-gray">View Bookings</a>
                         <a href="checkout.html" class="btn btn-danger">Checkout</a>
                     </div>
                 </div>
