--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -99,7 +99,7 @@
                         <i class="fas fa-trash-alt"></i>
                     </div>
                     <div class="cart-checkout-btns">
-                        <a href="mybookings.html" class="btn btn-gray">View Bookings</a>
+                        <a href="pages/mybookings.html" class="btn btn-gray">View Bookings</a>
                         <a href="pages/checkout.html" class="btn btn-danger">Checkout</a>
                     </div>
                 </div>
