--- a/forms/form_2/pages/view_data.html
+++ b/forms/form_2/pages/view_data.html
@@ -29,7 +29,7 @@
         </label>
         <input type="checkbox" name="check" id="check">
         <ul class="navbar-nav">
-            <li class="nav-item"><a href="/index.html" class="nav-link"><i class="fas fa-home"></i> Nyumbani</a>
+            <li class="nav-item"><a href="../index.html" class="nav-link"><i class="fas fa-home"></i> Nyumbani</a>
             </li>
             <li class="nav-item"><a href="" class="nav-link active"><i class="far fa-comment-dots"></i> Angalia
                     Maoni</a></li>
