--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -119,7 +119,7 @@
                         <div class="sign-in-up">
                             <input type="submit" name="signin" value="Sign In" class="btn btn-primary" id="sign_in">
                             <p class="forgot">
-                                <a href="#">Forgot password?</a>
+                                <a href="pages/forgot_pass.html">Forgot password?</a>
                             </p>
                             <a href="pages/signup.html" class="btn btn-danger" id="sign_up">Sign Up</a>
                         </div>
