--- a/celebrate/pages/forgot_pass.html
+++ b/celebrate/pages/forgot_pass.html
@@ -13,7 +13,7 @@
     <!-- Font Awesome Online -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../assets/css/book_mc.css">
+    <link rel="stylesheet" href="../assets/css/forgot_pass.css">
     <!-- Header-Footer CSS -->
     <link rel="stylesheet" href="../assets/css/header-footer.css">
     <!-- Utilities CSS -->
@@ -142,172 +142,32 @@
     <!-- ====== Main ====== -->
     <main>
 
-        <!-- MCs -->
-        <section id="mcs" class="text-black bg-white">
+        <!-- Sign Up -->
+        <section id="sign_up" class="text-black bg-white">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">Masters of Ceremony | Official</h2>
-                <div class="row flex even-columns pt-3 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid" on>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row flex even-columns pt-4 pb-0">
+                    <h2 class="display-4">Password Recovery</h2>
                 </div>
-                <div class="row flex even-columns pt-0 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid">
+                <div class="row flex even-columns pt-2 pb-1">
+                    <div class="user-account">
+                        <h2 class="pb-2">Recover Password</h2>
+                        <form action="">
+                            <div class="input-group">
+                                <div class="email-group">
+                                    <input type="email" name="email" id="email" placeholder="Email" required>
+                                    <i class="icon fas fa-envelope"></i>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
+                            <div class="sign-in-up">
+                                <input type="submit" class="btn btn-primary" id="sign_up" value="Get a new password">
                             </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row flex even-columns pt-0 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc4.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Njozi</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc1.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Kwetu</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc2.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Maeda</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous
-                                moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <button class="btn-cart">Select</button>
-                            </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- End MCs -->
+        <!-- End Bookings -->
+
     </main>
     <!-- End Main -->
 
@@ -383,7 +243,7 @@
     <script src="../assets/vendors/jquery/jquery.min.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/book_mc.js"></script>
+    <script src="../assets/js/forgot_pass.js"></script>
     <!-- End Scripts -->
 </body>
 
