--- a/celebrate/pages/signup.html
+++ b/celebrate/pages/signup.html
@@ -116,7 +116,7 @@
                         <div class="sign-in-up">
                             <input type="submit" name="signin" value="Sign In" class="btn btn-primary" id="sign_in">
                             <p class="forgot">
-                                <a href="#">Forgot password?</a>
+                                <a href="forgot_pass.html">Forgot password?</a>
                             </p>
                             <a href="signup.html" class="btn btn-danger" id="sign_up">Sign Up</a>
                         </div>
@@ -228,6 +228,29 @@
                                     <i class="icon fas fa-lock"></i>
                                     <i class="eye fas fa-eye text-gray"></i>
                                     <i class="eye fas fa-eye-slash text-gray"></i>
+                                </div>
+                            </div>
+                            <div class="input-group">
+                                <h4>Mc Type:</h4>
+                                <div class="mc-type-radios">
+                                    <div class="mc-type-radio">
+                                        <div class="radio">
+                                            <label for="mcType">Official</label>
+                                            <input type="radio" name="mcType" id="mcType_official">
+                                        </div>
+                                    </div>
+                                    <div class="mc-type-radio">
+                                        <div class="radio">
+                                            <label for="mcType">Casual</label>
+                                            <input type="radio" name="mcType" id="mcType_casual">
+                                        </div>
+                                    </div>
+                                    <div class="mc-type-radio">
+                                        <div class="radio">
+                                            <label for="mcType">Both</label>
+                                            <input type="radio" name="mcType" id="mcType_both" checked>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="input-group">
