--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -116,7 +116,7 @@
                         <div class="sign-in-up">
                             <input type="submit" name="signin" value="Sign In" class="btn btn-primary" id="sign_in">
                             <p class="forgot">
-                                <a href="#">Forgot password?</a>
+                                <a href="forgot_pass.html">Forgot password?</a>
                             </p>
                             <a href="signup.html" class="btn btn-danger" id="sign_up">Sign Up</a>
                         </div>
